--- a/style.css
+++ b/style.css
@@ -346,7 +346,7 @@ a .card-work img{
     font-size: 15px;
     line-height: 1.5em;
 }
-#contenedor {
+.contenedor {
     background-image: url(img/blurry-gradient-haikei.svg);
     background-repeat: no-repeat;
     background-size: cover;
@@ -367,14 +367,14 @@ a .card-work img{
     padding: 15px;
     border-bottom: 1px solid #fff;
 }
-#formulario {
+.formulario {
     width: 90%;
     min-height: 80px;
     margin: auto;
     padding: 0;
     margin-top: 20px;
 }
-#formulario input[type="text"],#formulario input[type="email"] {
+.formulario input[type="text"],.formulario input[type="email"] {
     height: 25px;
     width: 48%;
     padding: 5px;
@@ -385,7 +385,7 @@ a .card-work img{
 textarea {
     width: 100%;
 }
-#formulario .boton-enviar {
+.formulario .boton-enviar {
     padding: 5px;
     width: 50%;
     margin: 10px auto;
@@ -397,11 +397,11 @@ textarea {
     border-radius: 10px;
 }
 
-#formulario .boton-enviar:hover {
+.formulario .boton-enviar:hover {
     background: #35a6ee;
 }
 
-#mensaje {
+.mensaje {
     box-sizing: border-box;
     padding: 5px;
     border-radius: 10px;
@@ -409,16 +409,16 @@ textarea {
 
 /* para tablets*/
 @media only screen and (max-width: 768px) {
-    #contenedor {
+    .contenedor {
         width: 100%;
     }
     
-    #formulario input[type="text"],
-    #formulario input[type="email"] {
+    .formulario input[type="text"],
+    .formulario input[type="email"] {
         width: 100%;
     }
 
-    #formulario .boton-enviar {
+    .formulario .boton-enviar {
         width: 100%;
         float: none;
     }
@@ -426,7 +426,7 @@ textarea {
 
 /* Estilos para teléfonos */
 @media only screen and (max-width: 480px) {
-    #contenedor {
+    .contenedor {
         width: 90%;
     }
 }
