--- a/style.css
+++ b/style.css
@@ -421,48 +421,100 @@ nav ul li a {
     justify-items: center;
 }
 
-.card-work {
-    background-color: #fff;
-    border-radius: 15px;
-    overflow: hidden;
-    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-    max-width: 500px;
-    text-align: left;
-}
+.myCard {
+    background-color: transparent;
+    width: 600px;
+    height: 550px;
+    perspective: 1000px;
+  }
 
-.card-work:hover {
-    transform: translateY(-10px);
-    box-shadow: 0 8px 30px rgba(0, 0, 0, 0.3);
-}
-
-.card-work img {
+  .myCard img {
+    width: 600px;
+    height: 550px;
+    border-radius: 19px;
+  }
+  
+  .title {
+    font-size: 1.5em;
+    font-weight: 900;
+    text-align: center;
+    margin: 0;
+  }
+  
+  .innerCard {
+    position: relative;
     width: 100%;
-    height: auto;
-    display: block;
-}
-
-.card-content {
-    padding: 20px;
-}
-
-.card-content h3 {
-    font-size: 1.5rem;
-    margin: 10px 0;
-    color: #333;
-}
-
-.card-content p {
-    font-size: 1rem;
-    color: #555;
-    line-height: 1.5;
-}
-
-.card-work a {
-    text-decoration: none;
-    color: inherit;
-    display: block;
-}
+    height: 100%;
+    text-align: center;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+    cursor: pointer;
+  }
+  
+  .myCard:hover .innerCard {
+    transform: rotateY(180deg);
+  }
+  
+  .frontSide,
+  .backSide {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    border: 1px solid rgba(255, 255, 255, 0.8);
+    border-radius: 1rem;
+    color: white;
+    box-shadow: 0 0 0.3em rgba(255, 255, 255, 0.5);
+    font-weight: 700;
+  }
+  
+  .frontSide,
+  .frontSide::before {
+    background: gray;
+  }
+  
+  .backSide,
+  .backSide::before {
+    background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
+  }
+  
+  .backSide {
+    transform: rotateY(180deg);
+  }
+  
+  .frontSide::before,
+  .backSide::before {
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    content: '';
+    width: 110%;
+    height: 110%;
+    position: absolute;
+    z-index: -1;
+    border-radius: 1em;
+    filter: blur(20px);
+    animation: animate 5s linear infinite;
+  }
+  
+  @keyframes animate {
+    0% {
+      opacity: 0.3;
+    }
+  
+    80% {
+      opacity: 1;
+    }
+  
+    100% {
+      opacity: 0.3;
+    }
+  }
 
 @media (max-width: 768px) {
     .work h2 {
@@ -538,7 +590,7 @@ textarea.form-input {
 .form-button:hover {
     background-color: #ff5f59;
 }
-
+/*Footer*/
 .redes {
     padding: 20px;
     text-align: center;
